@@ -45,7 +45,7 @@
     </legalnotice>
 
     <copyright>
-      <year>2006</year>
+      <year>2007</year>
       <holder>Peter Eisentraut</holder>
     </copyright>
 
@@ -1435,6 +1435,40 @@ include /usr/share/cdbs/1/class/qmake.mk
       but many Qmake projects are not set up to have a functioning
       install target, in which case the installation of the package
       components has to be handled manually.</para>
+
+      <para><varname>DEB_BUILD_OPTIONS</varname> is checked for the
+      following options:
+      <variablelist>
+        <varlistentry>
+          <term><literal>noopt</literal></term>
+          <listitem><para>use <option>-O0</option> instead of <option>-O2</option></para></listitem>
+        </varlistentry>
+      </variablelist>
+      </para>
+    </sect1>
+
+    <sect1>
+      <title>The CMake Class</title>
+
+      <para>CMake is a cross-platform build tool.  On Unix-like systems
+      it typically generates makefiles, which are then run through make
+      normally.  To use the CMake class, add this include to
+      your <filename>debian/rules</filename>:
+
+<programlisting>
+include /usr/share/cdbs/1/class/cmake.mk
+</programlisting> 
+
+      The class takes care of the call to <command>cmake</command> and
+      the subsequent calls to <command>make</command>, with all the
+      necessary options to honor <varname>DEB_BUILD_OPTIONS</varname>,
+      for example.  To that end, the CMake class builds upon the
+      makefile class.</para>
+
+      <para>CMake is designed to always use separate source and build
+      directories.  Therefore, the CMake class by default builds the project
+      in a separate build directory named like <filename>obj-<replaceable>platform</replaceable></filename>
+      under the top-level source directory.</para>
 
       <para><varname>DEB_BUILD_OPTIONS</varname> is checked for the
       following options:
