@@ -2,6 +2,7 @@ cdbs (0.4.50) UNRELEASED; urgency=low
 
   * Made qmake class observe nostrip option (qmake.mk) (closes: #437272)
   * Call make as $(MAKE) (qmake.mk)
+  * Added cmake class (original patch by Fathi Boudra) (closes: #377524)
 
  -- Peter Eisentraut <petere@debian.org>  Mon, 13 Aug 2007 19:10:56 +0200
 
